<resources>
    <string name="app_name">Pokemon App</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search_pokemons">Search Pokemons</string>
    <string name="pokedex_num">pokedex num</string>
    <string name="type">type</string>
    <string name="cap_type">Type</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="hidden_ability">Hidden Ability</string>
    <string name="abilities">Abilities</string>
    <string name="stats">Stats</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Sp. Atk:</string>
    <string name="sp_def">Sp. Def:</string>
    <string name="speed">Speed:</string>
    <string name="total">Total:</string>
    <string name="evolution">Evolution</string>
    <string name="unevolved">unevolved</string>
    <string name="evolution_level">Lv %d</string>
    <string name="evolution_level_formatted">%s evolution</string>
    <string name="first_evolution">1st evolution</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="damage_overview">damage overview</string>
    <string name="moves">moves</string>
    <string name="pokemon">pokemon</string>
    <string name="offensive">Offensive</string>
    <string name="power">power</string>
    <string name="types">types</string>
    <string name="defensive">Defensive</string>
    <string name="none">None</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="about_content">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more_info">more info</string>
    <string name="clear_my_favorites_list">clear my favorites list</string>
    <string name="sofascore_android_academy">SofaScore Android Academy</string>
    <string name="class_2021">Class 2021</string>
    <string name="app_name_label">App Name</string>
    <string name="api_credit_label">API Credit</string>
    <string name="api_credit">pokemons</string>
    <string name="developer_label">Developer</string>
    <string name="developer">Tomislav Ukić</string>
    <string name="pokeathlon_stats">Pokéathlon stats</string>
    <string name="speed_label">Speed</string>
    <string name="power_label">Power</string>
    <string name="stamina_label">Stamina</string>
    <string name="skill_label">Skill</string>
    <string name="jump_label">Jump</string>
    <string name="total_label">Total</string>
    <string name="clear_favorites_list_title">Clear favorites list?</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear</string>
    <string name="snackbar_favorites_cleared_text">Favorites list is clear.</string>
    <string name="name">Name</string>
    <string name="range">Range</string>
    <string name="no_favorites">No favorites</string>
    <string name="there_are_no_pokemons_added_to_favorites">There are no pokemons added to favorites</string>
</resources>