<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/pokemon_search">

    <fragment
        android:id="@+id/pokemon_search"
        android:name="hr.sofascore.pokedex.ui.search.PokemonSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_pokemon_search" />

    <fragment
        android:id="@+id/favorite_pokemon"
        android:name="hr.sofascore.pokedex.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/settings"
        android:name="hr.sofascore.pokedex.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>