<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_alpha">

    <View
        android:id="@+id/popover_background_view"
        android:layout_width="328dp"
        android:layout_height="128dp"
        android:background="@drawable/popover_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Headline2DarkLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_favorites_list_title"
        app:layout_constraintStart_toStartOf="@id/popover_background_view"
        app:layout_constraintTop_toTopOf="@id/popover_background_view" />

    <TextView
        android:id="@+id/cancel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/tint_secondary"
        style="@style/ButtonLabelSurface1Center"
        app:layout_constraintBottom_toBottomOf="@id/clear_text_view"
        app:layout_constraintEnd_toStartOf="@id/clear_text_view"
        app:layout_constraintTop_toTopOf="@id/clear_text_view" />

    <TextView
        android:id="@+id/clear_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/clear_button_background"
        android:padding="8dp"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textColor="@color/surface_1"
        style="@style/ButtonLabelSurface1Center"
        app:layout_constraintBottom_toBottomOf="@id/popover_background_view"
        app:layout_constraintEnd_toEndOf="@+id/popover_background_view" />

</androidx.constraintlayout.widget.ConstraintLayout>