<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_0"
    tools:context=".ui.favorites.FavoritesFragment">

    <View
        android:id="@+id/favorites_title_background_view"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/tint_primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Headline2Surface1Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/favorites"
        app:layout_constraintBottom_toBottomOf="@id/favorites_title_background_view"
        app:layout_constraintStart_toStartOf="@id/favorites_title_background_view"
        app:layout_constraintTop_toTopOf="@id/favorites_title_background_view" />

    <View
        android:id="@+id/edit_favorites_reordering_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_pencil"
        app:layout_constraintBottom_toBottomOf="@id/favorites_title_background_view"
        app:layout_constraintEnd_toEndOf="@id/favorites_title_background_view"
        app:layout_constraintTop_toTopOf="@id/favorites_title_background_view"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"/>

    <View
        android:id="@+id/done_favorites_reordering_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        android:background="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="@id/favorites_title_background_view"
        app:layout_constraintEnd_toEndOf="@id/favorites_title_background_view"
        app:layout_constraintTop_toTopOf="@id/favorites_title_background_view" />

    <TextView
        android:id="@+id/no_favorites_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_favorites"
        style="@style/Headline3ColdGrayLeft"
        android:visibility="gone"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_title_background_view" />

    <TextView
        android:id="@+id/no_favorites_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/there_are_no_pokemons_added_to_favorites"
        style="@style/BodyColdGrayLeft"
        android:visibility="gone"
        android:gravity="center"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/no_favorites_title_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="72dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_title_background_view" />

</androidx.constraintlayout.widget.ConstraintLayout>